fix:correct vertical alignment of the form

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
 }
 @media (min-width: 768px) {
   .container {
-    padding: 17.1rem 0 10.9rem 0;
+    padding: 15rem 0 10.9rem 0;
   }
   .container__content {
     width: 100%;
