--- a/src/components/FormDate.css
+++ b/src/components/FormDate.css
@@ -86,7 +86,7 @@
   }
   .form__container {
     column-gap: 3.2rem;
-    margin-bottom: 7.5rem;
+    margin-bottom: 5rem;
   }
   .label {
     font-size: 1.4rem;
